--- a/templates/utilities.hpp.in
+++ b/templates/utilities.hpp.in
@@ -83,6 +83,8 @@ public:
    void fill(QedQcd& qedqcd) const { slha_io.fill(qedqcd); }
    void fill(@ModelName@_input_parameters&) const;
    void read_from_file(const std::string& file_name) { slha_io.read_from_file(file_name); }
+   void set_block(const std::string&, const DoubleMatrix&, const std::string&, double scale = 0.);
+   void set_block(const std::string&, const ComplexMatrix&, const std::string&, double scale = 0.);
    void set_spinfo(const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>&);
    void set_mass(const @ModelName@<Two_scale>&);
    void set_mixing_matrices(const @ModelName@<Two_scale>&);
