--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -32,6 +32,7 @@
 #include "coupling_monitor.hpp"
 #include "error.hpp"
 #include "ew_input.hpp"
+#include "program_options.hpp"
 #include "lowe.h"
 #include "command_line_options.hpp"
 
@@ -207,6 +208,7 @@ int main(int argc, const char* argv[])
    const std::string slha_input_file(options.get_slha_input_file());
    const std::string slha_output_file(options.get_slha_output_file());
    @ModelName@_slha_io slha_io;
+   Program_options program_options;
    QedQcd oneset;
    @ModelName@_input_parameters input;
 
@@ -214,6 +216,7 @@ int main(int argc, const char* argv[])
       slha_io.read_from_file(slha_input_file);
       slha_io.fill(oneset);
       slha_io.fill(input);
+      slha_io.fill(program_options);
    }
    oneset.toMz(); // run SM fermion masses to MZ
 
