--- a/templates/utilities.cpp.in
+++ b/templates/utilities.cpp.in
@@ -22,6 +22,7 @@
 #include "@ModelName@_input_parameters.hpp"
 #include "logger.hpp"
 #include "wrappers.hpp"
+#include "program_options.hpp"
 #include "lowe.h"
 #include "linalg.h"
 #include "config.h"
@@ -249,6 +250,15 @@ void @ModelName@_slha_io::fill(@ModelName@_input_parameters& input) const
    slha_io.read_block("EXTPAR", extpar_processor);
 }
 
+void @ModelName@_slha_io::fill(Program_options& options) const
+{
+   using namespace std::placeholders;
+   SLHA_io::Tuple_processor flexiblesusy_processor
+      = std::bind(&@ModelName@_slha_io::fill_flexiblesusy_tuple, std::ref(options), _1, _2);
+
+   slha_io.read_block("FlexibleSUSY", flexiblesusy_processor);
+}
+
 void @ModelName@_slha_io::fill_minpar_tuple(@ModelName@_input_parameters& input,
                                                 int key, double value)
 {
@@ -259,6 +269,16 @@ void @ModelName@_slha_io::fill_extpar_tuple(@ModelName@_input_parameters& input,
                                                 int key, double value)
 {
 @fillInputParametersFromEXTPAR@
+}
+
+void @ModelName@_slha_io::fill_flexiblesusy_tuple(Program_options& options,
+                                                  int key, double value)
+{
+   if (0 <= key && key < static_cast<int>(Program_options::NUMBER_OF_OPTIONS)) {
+      options.set((Program_options::Options)key, value);
+   } else {
+      WARNING("Unrecognized key in block FlexibleSUSY: " << key);
+   }
 }
 
 } // namespace flexiblesusy
