--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -50,7 +50,9 @@ public:
       , susy_scale_constraint()
       , low_scale_constraint()
       , high_scale(0.), susy_scale(0.), low_scale(0.)
-      , precision_goal(1.0e-5) {}
+      , precision_goal(1.0e-5)
+      , max_iterations(0)
+      , calculate_sm_masses(false) {}
    ~@ModelName@_runner() {}
 
    double get_high_scale() const { return high_scale; }
@@ -61,6 +63,8 @@ public:
       return model.get_problems();
    }
    void set_precision_goal(double precision_goal_) { precision_goal = precision_goal_; }
+   void set_max_iterations(unsigned n) { max_iterations = n; }
+   void set_calculate_sm_masses(bool flag) { calculate_sm_masses = flag; }
 
    void run(const QedQcd& oneset, const @ModelName@_input_parameters& input);
    void write_running_couplings(const std::string& filename = "@ModelName@_rge_running.dat") const;
@@ -74,6 +78,8 @@ private:
    @ModelName@_low_scale_constraint<T>  low_scale_constraint;
    double high_scale, susy_scale, low_scale;
    double precision_goal; ///< precision goal
+   unsigned max_iterations; ///< maximum number of iterations
+   bool calculate_sm_masses; ///< calculate SM pole masses
 };
 
 /**
@@ -108,8 +114,12 @@ void @ModelName@_runner<T>::run(const QedQcd& oneset,
    downward_constraints.push_back(&low_scale_constraint);
 
    model.set_input(input);
+   model.do_calculate_sm_pole_masses(calculate_sm_masses);
 
    @ModelName@_convergence_tester<T> convergence_tester(&model, precision_goal);
+   if (max_iterations > 0)
+      convergence_tester.set_max_iterations(max_iterations);
+
    @ModelName@_initial_guesser<T> initial_guesser(&model, input, oneset,
                                                   low_scale_constraint,
                                                   susy_scale_constraint,
@@ -221,6 +231,10 @@ int main(int argc, const char* argv[])
    oneset.toMz(); // run SM fermion masses to MZ
 
    @ModelName@_runner<algorithm_type> runner;
+   runner.set_precision_goal(program_options.get(Program_options::precision));
+   runner.set_max_iterations(program_options.get(Program_options::max_iterations));
+   runner.set_calculate_sm_masses(
+      program_options.get(Program_options::calculate_sm_masses) >= 1.0);
 
    runner.run(oneset, input);
 
