--- a/templates/run_low_scale_model.cpp.in
+++ b/templates/run_low_scale_model.cpp.in
@@ -49,7 +49,7 @@ int main(int argc, const char* argv[])
 
    const std::string slha_input_file(options.get_slha_input_file());
    const std::string slha_output_file(options.get_slha_output_file());
-   @ModelName@_slha_io slha_io;
+   @ModelName@_slha_io<algorithm_type> slha_io;
    Program_options program_options;
    QedQcd oneset;
    @ModelName@_input_parameters input;
