--- a/templates/utilities.hpp.in
+++ b/templates/utilities.hpp.in
@@ -45,12 +45,13 @@ public:
    }
 };
 
+template <class T>
 class @ModelName@_spectrum_plotter {
 public:
    @ModelName@_spectrum_plotter();
    ~@ModelName@_spectrum_plotter() {}
 
-   void extract_spectrum(const @ModelName@<Two_scale>&);
+   void extract_spectrum(const @ModelName@<T>&);
    void write_to_file(const std::string&) const;
 
 private:
@@ -76,6 +77,7 @@ private:
 struct @ModelName@_input_parameters;
 class Program_options;
 
+template <class T>
 class @ModelName@_slha_io {
 public:
    @ModelName@_slha_io();
@@ -89,9 +91,9 @@ public:
    void set_block(const std::string&, const DoubleMatrix&, const std::string&, double scale = 0.);
    void set_block(const std::string&, const ComplexMatrix&, const std::string&, double scale = 0.);
    void set_spinfo(const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>&);
-   void set_mass(const @ModelName@<Two_scale>&);
-   void set_mixing_matrices(const @ModelName@<Two_scale>&);
-   void set_model_parameters(const @ModelName@<Two_scale>&);
+   void set_mass(const @ModelName@<T>&);
+   void set_mixing_matrices(const @ModelName@<T>&);
+   void set_model_parameters(const @ModelName@<T>&);
    void write_to_file(const std::string&);
    void write_to_stream(std::ostream& ostr = std::cout) { slha_io.write_to_stream(ostr); }
 
