do not make the whole utility classes templates, only some functions

--- a/templates/utilities.cpp.in
+++ b/templates/utilities.cpp.in
@@ -31,60 +31,19 @@
 #include <sstream>
 #include <iostream>
 #include <iomanip>
-#include <cassert>
-#include "boost/format.hpp"
 
 using namespace softsusy;
 
 namespace flexiblesusy {
 
-   namespace {
-      /// SLHA line formatter for the MASS block entries
-      const boost::format mass_formatter(" %9d   %16.8E   # %s\n");
-      /// SLHA line formatter for the mixing matrix entries (NMIX, UMIX, VMIX, ...)
-      const boost::format mixing_matrix_formatter(" %2d %2d   %16.8E   # %s\n");
-      /// SLHA number formatter
-      const boost::format number_formatter("%16.8E");
-      /// SLHA line formatter for the one-element entries (HMIX, GAUGE, MSOFT, ...)
-      const boost::format single_element_formatter(" %5d   %16.8E   # %s\n");
-      /// SLHA line formatter for the SPINFO block entries
-      const boost::format spinfo_formatter(" %5d   %s\n");
-   }
-
-#define PHYSICAL(p) model.get_physical().p
-#define MODELPARAMETER(p) model.get_##p()
-#define FORMAT_MASS(pdg,mass,name) \
-   boost::format(mass_formatter) % pdg % mass % name
-#define FORMAT_MIXING_MATRIX(i,k,entry,name)                            \
-   boost::format(mixing_matrix_formatter) % i % k % entry % name
-#define FORMAT_ELEMENT(pdg,value,name)                                  \
-   boost::format(single_element_formatter) % pdg % value % name
-#define FORMAT_NUMBER(n)                                                \
-   boost::format(number_formatter) % n
-
-template <class T>
-@ModelName@_spectrum_plotter<T>::@ModelName@_spectrum_plotter()
+@ModelName@_spectrum_plotter::@ModelName@_spectrum_plotter()
    : spectrum()
    , scale(0.0)
    , width(16)
 {
 }
 
-
-template <class T>
-void @ModelName@_spectrum_plotter<T>::extract_spectrum(const @ModelName@<T>& model)
-{
-   spectrum.clear();
-   scale = model.get_scale();
-
-@fillSpectrumVectorWithSusyParticles@
-   if (model.do_calculate_sm_pole_masses()) {
-@fillSpectrumVectorWithSMParticles@
-   }
-}
-
-template <class T>
-void @ModelName@_spectrum_plotter<T>::write_to_file(const std::string& file_name) const
+void @ModelName@_spectrum_plotter::write_to_file(const std::string& file_name) const
 {
    if (spectrum.empty())
       return;
@@ -106,8 +65,7 @@ void @ModelName@_spectrum_plotter<T>::write_to_file(const std::string& file_name
                << file_name.c_str());
 }
 
-template <class T>
-void @ModelName@_spectrum_plotter<T>::write_spectrum(const TSpectrum& spectrum, std::ofstream& filestr) const
+void @ModelName@_spectrum_plotter::write_spectrum(const TSpectrum& spectrum, std::ofstream& filestr) const
 {
    for (std::size_t s = 0; s < spectrum.size(); ++s) {
       if (!filestr.good()) {
@@ -141,14 +99,12 @@ void @ModelName@_spectrum_plotter<T>::write_spectrum(const TSpectrum& spectrum, 
    }
 }
 
-template <class T>
-@ModelName@_slha_io<T>::@ModelName@_slha_io()
+@ModelName@_slha_io::@ModelName@_slha_io()
    : slha_io()
 {
 }
 
-template <class T>
-void @ModelName@_slha_io<T>::set_block(const std::string& name,
+void @ModelName@_slha_io::set_block(const std::string& name,
                                     const DoubleMatrix& matrix,
                                     const std::string& symbol, double scale)
 {
@@ -167,8 +123,7 @@ void @ModelName@_slha_io<T>::set_block(const std::string& name,
    slha_io.set_block(ss);
 }
 
-template <class T>
-void @ModelName@_slha_io<T>::set_block(const std::string& name,
+void @ModelName@_slha_io::set_block(const std::string& name,
                                     const Eigen::MatrixXd& matrix,
                                     const std::string& symbol, double scale)
 {
@@ -189,8 +144,7 @@ void @ModelName@_slha_io<T>::set_block(const std::string& name,
    slha_io.set_block(ss);
 }
 
-template <class T>
-void @ModelName@_slha_io<T>::set_block(const std::string& name,
+void @ModelName@_slha_io::set_block(const std::string& name,
                                     const ComplexMatrix& matrix,
                                     const std::string& symbol, double scale)
 {
@@ -210,8 +164,7 @@ void @ModelName@_slha_io<T>::set_block(const std::string& name,
    slha_io.set_block(ss);
 }
 
-template <class T>
-void @ModelName@_slha_io<T>::set_spinfo(const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& problems)
+void @ModelName@_slha_io::set_spinfo(const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& problems)
 {
    std::ostringstream serious_problems;
    problems.print(serious_problems);
@@ -227,69 +180,45 @@ void @ModelName@_slha_io<T>::set_spinfo(const Problems<@ModelName@_info::NUMBER_
    slha_io.set_block(spinfo);
 }
 
-template <class T>
-void @ModelName@_slha_io<T>::set_mass(const @ModelName@<T>& model)
-{
-@writeSLHAMassBlock@
-}
-
-template <class T>
-void @ModelName@_slha_io<T>::set_mixing_matrices(const @ModelName@<T>& model)
-{
-@writeSLHAMixingMatricesBlocks@
-}
-
-template <class T>
-void @ModelName@_slha_io<T>::set_model_parameters(const @ModelName@<T>& model)
-{
-@writeSLHAModelParametersBlocks@
-}
-
-template <class T>
-void @ModelName@_slha_io<T>::write_to_file(const std::string& file_name)
+void @ModelName@_slha_io::write_to_file(const std::string& file_name)
 {
    slha_io.write_to_file(file_name);
 }
 
-template <class T>
-void @ModelName@_slha_io<T>::fill(@ModelName@_input_parameters& input) const
+void @ModelName@_slha_io::fill(@ModelName@_input_parameters& input) const
 {
    using namespace std::placeholders;
    SLHA_io::Tuple_processor minpar_processor
-      = std::bind(&@ModelName@_slha_io<T>::fill_minpar_tuple, std::ref(input), _1, _2);
+      = std::bind(&@ModelName@_slha_io::fill_minpar_tuple, std::ref(input), _1, _2);
    SLHA_io::Tuple_processor extpar_processor
-      = std::bind(&@ModelName@_slha_io<T>::fill_extpar_tuple, std::ref(input), _1, _2);
+      = std::bind(&@ModelName@_slha_io::fill_extpar_tuple, std::ref(input), _1, _2);
 
    slha_io.read_block("MINPAR", minpar_processor);
    slha_io.read_block("EXTPAR", extpar_processor);
 }
 
-template <class T>
-void @ModelName@_slha_io<T>::fill(Program_options& options) const
+void @ModelName@_slha_io::fill(Program_options& options) const
 {
    using namespace std::placeholders;
    SLHA_io::Tuple_processor flexiblesusy_processor
-      = std::bind(&@ModelName@_slha_io<T>::fill_flexiblesusy_tuple, std::ref(options), _1, _2);
+      = std::bind(&@ModelName@_slha_io::fill_flexiblesusy_tuple, std::ref(options), _1, _2);
 
    slha_io.read_block("FlexibleSUSY", flexiblesusy_processor);
 }
 
-template <class T>
-void @ModelName@_slha_io<T>::fill_minpar_tuple(@ModelName@_input_parameters& input,
+void @ModelName@_slha_io::fill_minpar_tuple(@ModelName@_input_parameters& input,
                                                 int key, double value)
 {
 @fillInputParametersFromMINPAR@
 }
 
-template <class T>
-void @ModelName@_slha_io<T>::fill_extpar_tuple(@ModelName@_input_parameters& input,
+void @ModelName@_slha_io::fill_extpar_tuple(@ModelName@_input_parameters& input,
                                                 int key, double value)
 {
 @fillInputParametersFromEXTPAR@
 }
 
-template <class T>
-void @ModelName@_slha_io<T>::fill_flexiblesusy_tuple(Program_options& options,
+void @ModelName@_slha_io::fill_flexiblesusy_tuple(Program_options& options,
                                                   int key, double value)
 {
    if (0 <= key && key < static_cast<int>(Program_options::NUMBER_OF_OPTIONS)) {
