--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -198,8 +198,8 @@ void @ModelName@_runner<T>::write_running_couplings(const std::string& filename)
 template <class T>
 void @ModelName@_runner<T>::write_spectrum(const std::string& filename) const
 {
-   @ModelName@_spectrum_plotter<T> plotter;
-   plotter.extract_spectrum(model);
+   @ModelName@_spectrum_plotter plotter;
+   plotter.extract_spectrum<T>(model);
    plotter.write_to_file(filename);
 }
 
@@ -217,7 +217,7 @@ int main(int argc, const char* argv[])
 
    const std::string slha_input_file(options.get_slha_input_file());
    const std::string slha_output_file(options.get_slha_output_file());
-   @ModelName@_slha_io<algorithm_type> slha_io;
+   @ModelName@_slha_io slha_io;
    Program_options program_options;
    QedQcd oneset;
    @ModelName@_input_parameters input;
