--- a/templates/two_scale_initial_guesser_low_scale_model.cpp.in
+++ b/templates/two_scale_initial_guesser_low_scale_model.cpp.in
@@ -38,13 +38,15 @@ namespace flexiblesusy {
    @ModelName@<Two_scale>* model_,
    const @ModelName@_input_parameters& input_pars_,
    const QedQcd& oneset_,
-   const @ModelName@_low_scale_constraint<Two_scale>& low_constraint_
+   const @ModelName@_low_scale_constraint<Two_scale>& low_constraint_,
+   const @ModelName@_susy_scale_constraint<Two_scale>& susy_constraint_
 )
    : Initial_guesser<Two_scale>()
    , model(model_)
    , input_pars(input_pars_)
    , oneset(oneset_)
    , low_constraint(low_constraint_)
+   , susy_constraint(susy_constraint_)
 {
    assert(model && "@ModelName@_initial_guesser: Error: pointer to model"
           " @ModelName@<Two_scale> must not be zero");
@@ -58,7 +60,7 @@ void @ModelName@_initial_guesser<Two_scale>::guess()
 {
    model->clear();
    guess_susy_parameters();
-   model->run_to(low_constraint.get_scale());
+   guess_soft_parameters();
 }
 
 void @ModelName@_initial_guesser<Two_scale>::guess_susy_parameters()
@@ -101,6 +103,32 @@ void @ModelName@_initial_guesser<Two_scale>::guess_susy_parameters()
    model->set_@UpYukawa@(new_Yu);
    model->set_@DownYukawa@(new_Yd);
    model->set_@ElectronYukawa@(new_Ye);
+}
+
+void @ModelName@_initial_guesser<Two_scale>::guess_soft_parameters()
+{
+   const double low_scale_guess = low_constraint.get_initial_scale_guess();
+   const double susy_scale_guess = susy_constraint.get_initial_scale_guess();
+
+   int err = model->run_to(susy_scale_guess);
+   if (err)
+      throw NonPerturbativeRunningError(model, susy_scale_guess);
+
+   // apply susy-scale constraint
+   susy_constraint.set_model(model);
+   susy_constraint.apply();
+
+   err = model->run_to(low_scale_guess);
+   if (err)
+      throw NonPerturbativeRunningError(model, low_scale_guess);
+
+   // apply EWSB constraint
+   model->solve_ewsb_tree_level();
+
+   // calculate tree-level spectrum
+   model->calculate_DRbar_parameters();
+   model->set_thresholds(3);
+   model->set_loops(2);
 }
 
 } // namespace flexiblesusy
