--- a/templates/two_scale_initial_guesser_low_scale_model.hpp.in
+++ b/templates/two_scale_initial_guesser_low_scale_model.hpp.in
@@ -24,6 +24,7 @@
 #include "@ModelName@_initial_guesser.hpp"
 #include "@ModelName@_input_parameters.hpp"
 #include "@ModelName@_two_scale_low_scale_constraint.hpp"
+#include "@ModelName@_two_scale_susy_scale_constraint.hpp"
 #include "two_scale_initial_guesser.hpp"
 #include "error.hpp"
 #include "lowe.h"
@@ -63,7 +64,8 @@ public:
    @ModelName@_initial_guesser(@ModelName@<Two_scale>*,
                                const @ModelName@_input_parameters&,
                                const QedQcd&,
-                               const @ModelName@_low_scale_constraint<Two_scale>&);
+                               const @ModelName@_low_scale_constraint<Two_scale>&,
+                               const @ModelName@_susy_scale_constraint<Two_scale>&);
    virtual ~@ModelName@_initial_guesser();
    virtual void guess();
 
@@ -72,8 +74,10 @@ private:
    @ModelName@_input_parameters input_pars;
    QedQcd oneset;
    @ModelName@_low_scale_constraint<Two_scale> low_constraint;
+   @ModelName@_susy_scale_constraint<Two_scale> susy_constraint;
 
    void guess_susy_parameters();
+   void guess_soft_parameters();
 };
 
 } // namespace flexiblesusy
