--- a/templates/utilities.hpp.in
+++ b/templates/utilities.hpp.in
@@ -124,13 +124,8 @@ public:
    void fill(@ModelName@_input_parameters&) const;
    void fill(Program_options&) const;
    void read_from_file(const std::string& file_name) { slha_io.read_from_file(file_name); }
-   void set_block(const std::string&, const Eigen::MatrixXd&, const std::string&, double scale = 0.);
-   void set_block(const std::string&, const DoubleMatrix&, const std::string&, double scale = 0.);
-   void set_block(const std::string&, const ComplexMatrix&, const std::string&, double scale = 0.);
+   template <class T> void set_spectrum(const @ModelName@<T>&);
    void set_spinfo(const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>&);
-   template <class T> void set_mass(const @ModelName@<T>&);
-   template <class T> void set_mixing_matrices(const @ModelName@<T>&);
-   template <class T> void set_model_parameters(const @ModelName@<T>&);
    void write_to_file(const std::string&);
    void write_to_stream(std::ostream& ostr = std::cout) { slha_io.write_to_stream(ostr); }
 
@@ -140,6 +135,13 @@ public:
 
 private:
    SLHA_io slha_io; ///< SLHA io class
+
+   void set_block(const std::string&, const Eigen::MatrixXd&, const std::string&, double scale = 0.);
+   void set_block(const std::string&, const DoubleMatrix&, const std::string&, double scale = 0.);
+   void set_block(const std::string&, const ComplexMatrix&, const std::string&, double scale = 0.);
+   template <class T> void set_mass(const @ModelName@<T>&);
+   template <class T> void set_mixing_matrices(const @ModelName@<T>&);
+   template <class T> void set_model_parameters(const @ModelName@<T>&);
 };
 
 template <class T>
@@ -158,6 +160,14 @@ template <class T>
 void @ModelName@_slha_io::set_model_parameters(const @ModelName@<T>& model)
 {
 @writeSLHAModelParametersBlocks@
+}
+
+template <class T>
+void @ModelName@_slha_io::set_spectrum(const @ModelName@<T>& model)
+{
+   set_model_parameters(model);
+   set_mass(model);
+   set_mixing_matrices(model);
 }
 
 } // namespace flexiblesusy
