--- a/templates/utilities.cpp.in
+++ b/templates/utilities.cpp.in
@@ -104,6 +104,25 @@ void @ModelName@_spectrum_plotter::write_spectrum(const TSpectrum& spectrum, std
 {
 }
 
+/**
+ * This function treats a given scalar as 1x1 matrix.  Such a case is
+ * not defined in the SLHA standard, but we still handle it to avoid
+ * problems.
+ */
+void @ModelName@_slha_io::set_block(const std::string& name,
+                                    double value,
+                                    const std::string& symbol, double scale)
+{
+   std::ostringstream ss;
+   ss << "Block " << name;
+   if (scale != 0.)
+      ss << " Q= " << FORMAT_NUMBER(scale);
+   ss << '\n'
+      << boost::format(mixing_matrix_formatter) % 1 % 1 % value % symbol;
+
+   slha_io.set_block(ss);
+}
+
 void @ModelName@_slha_io::set_block(const std::string& name,
                                     const DoubleMatrix& matrix,
                                     const std::string& symbol, double scale)
