--- a/templates/utilities.hpp.in
+++ b/templates/utilities.hpp.in
@@ -136,6 +136,7 @@ public:
 private:
    SLHA_io slha_io; ///< SLHA io class
 
+   void set_block(const std::string&, double, const std::string&, double scale = 0.);
    void set_block(const std::string&, const Eigen::MatrixXd&, const std::string&, double scale = 0.);
    void set_block(const std::string&, const DoubleMatrix&, const std::string&, double scale = 0.);
    void set_block(const std::string&, const ComplexMatrix&, const std::string&, double scale = 0.);
