--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -50,6 +50,7 @@ public:
       , susy_scale_constraint()
       , low_scale_constraint()
       , high_scale(0.), susy_scale(0.), low_scale(0.)
+      , parameter_output_scale(0.)
       , precision_goal(1.0e-5)
       , max_iterations(0)
       , calculate_sm_masses(false) {}
@@ -62,6 +63,7 @@ public:
    const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& get_problems() const {
       return model.get_problems();
    }
+   void set_parameter_output_scale(double s) { parameter_output_scale = s; }
    void set_precision_goal(double precision_goal_) { precision_goal = precision_goal_; }
    void set_max_iterations(unsigned n) { max_iterations = n; }
    void set_calculate_sm_masses(bool flag) { calculate_sm_masses = flag; }
@@ -77,6 +79,7 @@ private:
    @ModelName@_susy_scale_constraint<T> susy_scale_constraint;
    @ModelName@_low_scale_constraint<T>  low_scale_constraint;
    double high_scale, susy_scale, low_scale;
+   double parameter_output_scale; ///< output scale for running parameters
    double precision_goal; ///< precision goal
    unsigned max_iterations; ///< maximum number of iterations
    bool calculate_sm_masses; ///< calculate SM pole masses
@@ -145,8 +148,12 @@ void @ModelName@_runner<T>::run(const QedQcd& oneset,
 
       model.calculate_spectrum();
 
-      if (model.run_to(low_scale))
-         throw NonPerturbativeRunningError(low_scale);
+      // run to output scale (if scale > 0)
+      if (std::fabs(parameter_output_scale)
+          > std::numeric_limits<double>::epsilon()) {
+         if (model.run_to(parameter_output_scale))
+            throw NonPerturbativeRunningError(parameter_output_scale);
+      }
    } catch (const NoConvergenceError& error) {
       model.get_problems().flag_no_convergence();
       ERROR(error.what());
@@ -235,6 +242,8 @@ int main(int argc, const char* argv[])
    runner.set_max_iterations(program_options.get(Program_options::max_iterations));
    runner.set_calculate_sm_masses(
       program_options.get(Program_options::calculate_sm_masses) >= 1.0);
+   // @todo read parameter output scale from Block MODSEL 12
+   runner.set_parameter_output_scale(0.);
 
    runner.run(oneset, input);
 
