--- a/templates/utilities.hpp.in
+++ b/templates/utilities.hpp.in
@@ -98,7 +98,8 @@ public:
    void fill(QedQcd& qedqcd) const { slha_io.fill(qedqcd); }
    void fill(@ModelName@_input_parameters&) const;
    void fill(Program_options&) const;
-   void read_from_file(const std::string& file_name) { slha_io.read_from_file(file_name); }
+   double get_parameter_output_scale() const;
+   void read_from_file(const std::string&);
    template <class T> void set_spectrum(const @ModelName@<T>&);
    void set_spinfo(const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>&);
    void write_to_file(const std::string&);
