--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -21,6 +21,10 @@ endif
 
 ifneq ($(findstring lattice,$(ALGORITHMS)),)
 LIB@CLASSNAME@_SRC += \
+		$(DIR)/run_@CLASSNAME@.cpp \
+		$(DIR)/@CLASSNAME@_info.cpp \
+		$(DIR)/@CLASSNAME@_physical.cpp \
+		$(DIR)/@CLASSNAME@_utilities.cpp \
 		$(DIR)/@CLASSNAME@_lattice_convergence_tester.cpp \
 		$(DIR)/@CLASSNAME@_lattice_high_scale_constraint.cpp \
 		$(DIR)/@CLASSNAME@_lattice_initial_guesser.cpp \
@@ -28,6 +32,9 @@ LIB@CLASSNAME@_SRC += \
 		$(DIR)/@CLASSNAME@_lattice_model.cpp \
 		$(DIR)/@CLASSNAME@_lattice_susy_scale_constraint.cpp
 endif
+
+# remove duplicates in case all algorithms are used
+LIB@CLASSNAME@_SRC := $(sort $(LIB@CLASSNAME@_SRC))
 
 LIB@CLASSNAME@_OBJ := \
 		$(patsubst %.cpp, %.o, $(filter %.cpp, $(LIB@CLASSNAME@_SRC))) \
