--- a/templates/utilities.cpp.in
+++ b/templates/utilities.cpp.in
@@ -147,6 +147,8 @@ void @ModelName@_slha_io::fill(@ModelName@_input_parameters& input) const
 
    slha_io.read_block("MINPAR", minpar_processor);
    slha_io.read_block("EXTPAR", extpar_processor);
+
+@fillUnfixedParameters@
 }
 
 void @ModelName@_slha_io::fill(Program_options& options) const
