--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -68,94 +68,94 @@ $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp: $(DIR)/start.m $(META_SRC) $(T
 	$(MATH) -run "Get[\"$<\"]; Quit[]"
 
 $(DIR)/@CLASSNAME@_two_scale_susy_parameters.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_two_scale_soft_parameters.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_two_scale_soft_parameters.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_physical.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_physical.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_model.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_lattice_model.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_lattice_model.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_two_scale_model.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_two_scale_model.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/run_@CLASSNAME@.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_high_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_susy_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_low_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_lattice_high_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_two_scale_high_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_lattice_susy_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_two_scale_susy_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_lattice_low_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_two_scale_low_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_convergence_tester.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_lattice_convergence_tester.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_two_scale_convergence_tester.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_initial_guesser.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_lattice_initial_guesser.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_two_scale_initial_guesser.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_info.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_info.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_utilities.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(DIR)/@CLASSNAME@_utilities.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	true
+	@true
 
 $(LIB@CLASSNAME@_DEP) $(LIB@CLASSNAME@_OBJ) $(DIR)/run_@CLASSNAME@.o: CPPFLAGS += $(GSLFLAGS) $(EIGENFLAGS) $(BOOSTFLAGS)
 
