--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -26,6 +26,7 @@
 #include "@ModelName@_two_scale_convergence_tester.hpp"
 #include "@ModelName@_two_scale_initial_guesser.hpp"
 #include "@ModelName@_utilities.hpp"
+#include "@ModelName@_slha_io.hpp"
 
 #include "two_scale_running_precision.hpp"
 #include "two_scale_solver.hpp"
